# api/swagger.yaml
@@ -6,7 +6,7 @@ info:
   version: "1.0.0"
   title: "Simple Bookstore"
   contact:
-    email: "vittorio.zaccaria@polimi.it"
+    email: "carlos.vega@mail.polimi.it"
   license:
     name: "Apache-2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
@@ -159,6 +159,32 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Event"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Book not found"
+      x-swagger-router-controller: "Book"
+  /books/getSimilar/{bookId}:
+    get:
+      tags:
+      - "book"
+      summary: "Find similar book"
+      description: "Returns a book"
+      operationId: "getSimilarBook"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "bookId"
+        in: "path"
+        description: "ID of book to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Book"
         400:
           description: "Invalid ID supplied"
         404:
@@ -450,6 +476,33 @@ paths:
         404:
           description: "Theme not found"
       x-swagger-router-controller: "Group"
+  /group/{groupName}:
+    get:
+      tags:
+      - "group"
+      summary: "Get list of books"
+      description: "Returns an array of books"
+      operationId: "getGroupBooks"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "groupName"
+        in: "path"
+        description: "Name of book group"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "A collection of Books"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Book"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Group not found"
+      x-swagger-router-controller: "Group"
   /user/login:
     post:
       tags:
@@ -485,9 +538,50 @@ paths:
       operationId: "userLogoutPOST"
       produces:
       - "application/json"
+      parameters: []
       responses:
         200:
           description: "succesfull logout"
+        404:
+          description: "unauthorized"
+      x-swagger-router-controller: "User"
+  /user/reserveBook:
+    post:
+      tags:
+      - "user"
+      summary: "reserveBook"
+      description: "Logged user Reserve Book"
+      operationId: "userReserveBook"
+      consumes:
+      - "application/x-www-form-urlencoded"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "bookId"
+        in: "formData"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "succesfull Reserve"
+        404:
+          description: "unauthorized"
+      x-swagger-router-controller: "User"
+  /user/getUserName:
+    get:
+      tags:
+      - "user"
+      summary: "Get actual user name"
+      description: "Returns string"
+      operationId: "getUserName"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "User Name"
+          schema:
+            type: "string"
         404:
           description: "unauthorized"
       x-swagger-router-controller: "User"
